# llmtaskforce-rag

./: .env_template  .gitignore  NABC_Validated_RAG_Presentation.pptx  README.md  app.py  init_poetry_colab.ipynb  merge_pdfs.py  pdf_extractor.py  plot_results.py  pyproject.toml  testing-rag.py  visualize.py
data/: results-hkunlp-emb-deepseekr1-1point5B-llama3.2.xlsx  results-hkunlp-emb-qwen2.5-7B-llama3.2.xlsx  results-hkunlp-embdeepseekr1-8B-llama3.2.xlsx
eval/: .env  Cargo.toml  RESULTS.md  templateenv
eval/data/: final_results.xlsx
eval/data/references/: ground_truth_v1.xlsx  ground_truth_v2.xlsx  ground_truth_v3.xlsx  ground_truth_v4.xlsx  results_template.xlsx  results_template_2.xlsx
eval/data/results/: final_results.xlsx  final_results_230pages_GT2.0_hkunlp-emb_DSgen.xlsx  final_results_230pages_groudttruth2.0_2.xlsx  final_results_230pages_groundtruth2.0.xlsx  final_results_corrrectly_run_36_pages.xlsx  final_results_hkunlp_emb_deepseek8b_llama3.2_avcodes.xlsx  final_results_hkunlp_emb_qwen2.5-7B-llama3.2.xlsx  final_results_results_230pages_groundtruth2.0_deepseek_generation.xlsx
eval/src/: main.rs
lip-guidance-test/: dataset-version1.0.xlsx  dataset-version2.0.xlsx  ~$dataset-version1.0.xlsx
mdsap/: MDSAP.xlsx  Q&A_RDC RESOLUTION No. 665, OF MARCH 30, 2022.xlsx  Q&A_interdocuments.xlsx  QA - RDC 665-2022 findings EN.xlsx  QA - RDC 665-2022 findings.xlsx
mdsap.bilingual-embedding-large/: index.pkl
mdsap.gte-Qwen2-7B-instruct/: index.pkl
mdsap.instructor_xl/: index.pkl
mdsap.multilingual-e5-large-instruct/: index.pkl
store.idx/: index.pkl
(+3 files in other folders)
