[tool.poetry]
name = "llmtaskforce-rag"
version = "0.1.0"
description = "An open source project for a RAG"
authors = ["Nicolas Perez <nicoapg1@gmail.com>"]
readme = "README.md"
packages = [{include = "llmtaskforce_rag"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
