[tool.poetry]
name = "llmtaskforce-rag"
version = "0.1.0"
description = "An open source project for a RAG"
authors = ["Nicolas Perez <nicoapg1@gmail.com>"]
readme = "README.md"
packages = [{include = "llmtaskforce_rag"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.44.0"
pypdf2 = "^3.0.1"
ollama = "^0.4.7"
langchain = "^0.3.22"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.20"
langchain-ollama = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
