[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
calamine = "0.22"
xlsxwriter = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = "0.4"